<resources>
    <string name="app_name">Quiz App</string>
    <string name="mixed">Quiz\nMixed</string>
    <string name="chemistry">Quiz\nChemistry</string>
    <string name="quize_physics">Quiz\nPhysics</string>
    <string name="quize_math">Quiz\nMath</string>
    <string name="choose_level">Choose level</string>
    <string name="quizes">Quizzes</string>
    <string name="interesting">Interesting</string>
    <string name="choose_category">Choose Category</string>
    <string name="skip">Skip</string>
    <string-array name="math_easy">
        <item></item>
        <item>2 … son hisoblanadi</item>
        <item>Ikkita eng katta raqamdan tashkiltopgan sonni ko\'rsating</item>
        <item>90 daqiqa necha  soatga teng</item>
        <item>Quyidagi sonlarning o\'rta arifmetiginitoping: 25, 20, 23, 22</item>
        <item>Ikkita burchagi teng bo\'lgan uchburchak nima deyiladi</item>
        <item>Agar biz biror sonni 0 ga ko\'paytirsaknatija nimaga teng bo\'ladi</item>
        <item>Agar biz 99 ga 1 ni qo\'shsak necha xonali son hosil bo\'ladi</item>
        <item>Berilgan ikki nuqtadan nechta to\'g\'richiziq o\'tkazish mumkin</item>
        <item>Uchta bolaning o\'rtacha yoshi 9 ga teng ularning yoshlari yig\'indisini toping</item>
        <item>45 kun qancha oyga teng</item>
        <item>9 ning bo\'luvchilarini ko\'rsating</item>
        <item>Avtomobilning tezligi 60 km/h u 1.25 soatda … masofani o\'tadi</item>
        <item>To\'rtburchakning nechta diogonali bor</item>
        <item> O\'tkir burchak bu … </item>
        <item>Kvadratning tomoni 35 m ga teng bo\'lsa uning yuzi … ga teng</item>
        <item>750 g lik sutga qancha suv qo\'shilsa 1 kg lik suyuqlik olish mumkin</item>
    </string-array>
    <string-array name="math_answers">
        <item>19</item>
        <item>juft</item>
        <item>99</item>
        <item>1.30 hours</item>
        <item>22.5</item>
        <item>teng yonli</item>
        <item>nolga teng bo\'ladi</item>
        <item>3</item>
        <item>1 ta</item>
        <item>27 yosh</item>
        <item>1.5 oy</item>
        <item>bularning hech biri</item>
        <item>75 km</item>
        <item>2 ta</item>
        <item>90° dan kichik</item>
        <item>1225 metr kvadrat</item>
        <item>0.25 kg</item>
    </string-array>
    <string-array name="math_variantA">
        <item>19</item>
        <item>juft</item>
        <item>99</item>
        <item>1.30 hours</item>
        <item>22.5</item>
        <item>teng yonli</item>
        <item>nolga teng bo\'ladi</item>
        <item>3</item>
        <item>1 ta</item>
        <item>27 yosh</item>
        <item>1.5 oy</item>
        <item>bularning hech biri</item>
        <item>75 km</item>
        <item>2 ta</item>
        <item>90° dan kichik</item>
        <item>1225 metr kvadrat</item>
        <item>0.25 kg</item>
    </string-array>
    <string-array name="math_variantB">
        <item>20</item>
        <item>toq</item>
        <item>98</item>
        <item>1.5 hours</item>
        <item>24</item>
        <item>teng burchakli</item>
        <item>sonni o\'ziga teng bo\'ladi</item>
        <item>100</item>
        <item>2 ta</item>
        <item>24 yosh</item>
        <item>1 oy</item>
        <item>1, 2, 3</item>
        <item>65 km</item>
        <item> 3 ta</item>
        <item> 90° ga teng</item>
        <item>1225 metr</item>
        <item>0.2 kg</item>
    </string-array>
    <string-array name="math_variantC">
        <item>19</item>
        <item>juft va toq</item>
        <item>90</item>
        <item>1.8 hours</item>
        <item>42</item>
        <item>teng tomonli</item>
        <item>sonni o\'ziga teng bo\'lmaydi</item>
        <item>200</item>
        <item>8 ta</item>
        <item>65 yosh</item>
        <item>8 oy</item>
        <item>1, 2, 3, 0</item>
        <item>56 km</item>
        <item>9 ta</item>
        <item>170° ga teng</item>
        <item>122 metr</item>
        <item>0.4 kg</item>
    </string-array>
    <string-array name="math_variantD">
        <item>18</item>
        <item>tub</item>
        <item>96</item>
        <item>0.9 hours</item>
        <item>21.5</item>
        <item>to\'g\'ri burchakli</item>
        <item>bularning hech biri</item>
        <item>1</item>
        <item>iloji yo\'q</item>
        <item>36 yosh</item>
        <item>2.5 oy</item>
        <item>1, 6, 9</item>
        <item>60 km</item>
        <item>diogonali yo\'q</item>
        <item>180° ga teng</item>
        <item>1252 mert</item>
        <item>2.5 kg</item>
    </string-array>
    <string name="questionm_1">x² == 16  x -> ?</string>
    <string name="variantm_1_a">4</string>
    <string name="variantm_1_b">-4</string>
    <string name="variantm_1_c">2</string>
    <string name="variantm_1_d">4  va -4</string>
    <string name="answerm1">4  va -4</string>
    <string name="questionm_2"> 8 – 8/4 * 3 == ?</string>
    <string name="variantm_2_a">2</string>
    <string name="variantm_2_b">18</string>
    <string name="variantm_2_c">16</string>
    <string name="variantm_2_d">4</string>
    <string name="answerm2">2</string>
    <string name="questionm_3">f(x) = 2*x²+1  f(1) -> ?</string>
    <string name="variantm_3_a">3</string>
    <string name="variantm_3_b">5</string>
    <string name="variantm_3_c">1</string>
    <string name="variantm_3_d">4</string>
    <string name="answerm3">3</string>
    <string name="questionm_4"> 1/x = 2  bo\'lsa x -> ?</string>
    <string name="variantm_4_a">4</string>
    <string name="variantm_4_b">2</string>
    <string name="variantm_4_c">0.5</string>
    <string name="variantm_4_d">2.5</string>
    <string name="answerm4">0.5</string>
    <string name="questionm_5"> -3 soni -2 dan qancha kichik ?</string>
    <string name="variantm_5_a">1.5</string>
    <string name="variantm_5_b">-1.5</string>
    <string name="variantm_5_c">2</string>
    <string name="variantm_5_d">manfiy sonlarda bunday tushuncha yo\'q</string>
    <string name="answerm5">manfiy sonlarda bunday tushuncha yo\'q</string>
    <string name="questionm_6">Qaysi biri katta ?  - 15  yoki - 5</string>
    <string name="variantm_6_a">-5</string>
    <string name="variantm_6_b">-15</string>
    <string name="variantm_6_c">5</string>
    <string name="variantm_6_d">15</string>
    <string name="answerm6">-5</string>
    <string name="questionm_7"> Qaysi sonni nolga(0) ko\'paytirsa nol boladi ?</string>
    <string name="variantm_7_a">5</string>
    <string name="variantm_7_b">8</string>
    <string name="variantm_7_c">0</string>
    <string name="variantm_7_d">har qanday sonni</string>
    <string name="answerm7">har qanday sonni</string>
    <string name="questionm_8">To\'g\'ri burchakli uchburchakning bir burchagi doimo </string>
    <string name="variantm_8_a">80°</string>
    <string name="variantm_8_b">20°</string>
    <string name="variantm_8_c">45°</string>
    <string name="variantm_8_d">90°</string>
    <string name="answerm8">90°</string>
    <string name="questionm_9">Uchburchak tomonlariga ko\'ra necha xil bo\'ladi ?</string>
    <string name="variantm_9_a">3</string>
    <string name="variantm_9_b">2</string>
    <string name="variantm_9_c">5</string>
    <string name="variantm_9_d">4</string>
    <string name="answerm9">3</string>
    <string name="questionm_10">Uchburchak burchaklariga ko\'ra necha xil bo\'ladi ?</string>
    <string name="variantm_10_a">5</string>
    <string name="variantm_10_b">2</string>
    <string name="variantm_10_c">3</string>
    <string name="variantm_10_d">4</string>
    <string name="answerm10">3</string>
    <string name="questionm_11">sin30° -> ?</string>
    <string name="variantm_11_a">1</string>
    <string name="variantm_11_b">0.2</string>
    <string name="variantm_11_c">0.5</string>
    <string name="variantm_11_d">0.6</string>
    <string name="answerm11">0.5</string>
    <string name="questionm_12">cos60° -> ?</string>
    <string name="variantm_12_a">0.33</string>
    <string name="variantm_12_b">0.2</string>
    <string name="variantm_12_c">0.5</string>
    <string name="variantm_12_d">0.4</string>
    <string name="answerm12">0.5</string>
    <string name="questionm_13">tg45°  -> </string>
    <string name="variantm_13_a">1</string>
    <string name="variantm_13_b">2</string>
    <string name="variantm_13_c">4</string>
    <string name="variantm_13_d">3</string>
    <string name="answerm13">1</string>
    <string name="questionm_14"> -1 soniga qarama-qarshi son nechchiga teng ?</string>
    <string name="variantm_14_d">1</string>
    <string name="variantm_14_b">-0.5</string>
    <string name="variantm_14_c">-0.1</string>
    <string name="variantm_14_a">-1</string>
    <string name="answerm14">1</string>
    <string name="questionm_15"> -1 soniga teskari son nechchiga teng ?</string>
    <string name="variantm_15_b">-1</string>
    <string name="variantm_15_a">-0.5</string>
    <string name="variantm_15_c">-0.2</string>
    <string name="variantm_15_d">2</string>
    <string name="answerm15">-1</string>
    <string name="questionm_16">Pifagor teoremasi qaysi geometrik shakl uchun ?</string>
    <string name="variantm_16_a">uchburchak</string>
    <string name="variantm_16_b">to\'rtburchak</string>
    <string name="variantm_16_c">aylana</string>
    <string name="variantm_16_d">muntazam oltiburchak</string>
    <string name="answerm16">uchburchak</string>
    <string name="questionm_17">Uchburchakning tomonlari a = 5, b = 4, c = 3 ga teng bo\'lsa yuzasi nechaga teng ?</string>
    <string name="variantm_17_d">6</string>
    <string name="variantm_17_b">4</string>
    <string name="variantm_17_c">12</string>
    <string name="variantm_17_a">8</string>
    <string name="answerm17">6</string>
    <string name="questionm_18">To\'g\'ri to\'rtburchakning tomonlari o\'zaro teng va 3 ga teng bo\'lsa, yuzasi nechaga teng ?</string>
    <string name="variantm_18_a">9</string>
    <string name="variantm_18_b">6</string>
    <string name="variantm_18_c">12</string>
    <string name="variantm_18_d">8</string>
    <string name="answerm18">9</string>
    <string name="questionm_19">Yoyiq burchak necha gradusga teng ?</string>
    <string name="variantm_19_c">180°</string>
    <string name="variantm_19_b">160°</string>
    <string name="variantm_19_a">90°</string>
    <string name="variantm_19_d">45°</string>
    <string name="answerm19">180°</string>
    <string name="questionm_20">Aylanani radiusi 5 ga teng bo\'lsa perimetri nechaga teng ?</string>
    <string name="variantm_20_a">10π</string>
    <string name="variantm_20_b">25π</string>
    <string name="variantm_20_c">12π</string>
    <string name="variantm_20_d">35π</string>
    <string name="answerm20">10π</string>
    <string name="questionm_21">Diametri 20 ga teng bo\'lgan aylanani radiusi nechaga teng?</string>
    <string name="variantm_21_d">10</string>
    <string name="variantm_21_b">16</string>
    <string name="variantm_21_c">20</string>
    <string name="variantm_21_a">5</string>
    <string name="answerm21">10</string>
    <string name="questionm_22">Aylananing radiusi 5 ga teng bo\'lsa, yuzasi nechaga teng ?  </string>
    <string name="variantm_22_a">25π</string>
    <string name="variantm_22_b">16π</string>
    <string name="variantm_22_c">9π</string>
    <string name="variantm_22_d">mavjud emas</string>
    <string name="answerm22">mavjud emas</string>
    <string name="questionm_23">-15 + 25 = ?</string>
    <string name="variantm_23_c">10</string>
    <string name="variantm_23_b">5</string>
    <string name="variantm_23_a">qo\'shib bo\'lmaydi</string>
    <string name="variantm_23_d">25</string>
    <string name="siz_10_ta_savoldan">Siz 10 ta savoldan</string>
    <string name="home">Home</string>
    <string name="best_results">Best Results</string>
    <string name="quiz_math">Math</string>
    <string name="quiz_physics">Physics</string>
    <string name="quiz_chemistry">Chemistry</string>
    <string name="results">Results</string>
</resources>