<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trueCount"
        style="@style/style_finish"
        android:elevation="4dp"
        android:shadowColor="@color/white"
        android:shadowDx="30"
        android:shadowDy="20"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintLeft_toLeftOf="@id/card"
        app:layout_constraintRight_toRightOf="@id/card"
        app:layout_constraintTop_toTopOf="@+id/card"
        tools:text="@string/siz_10_ta_savoldan" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selectble_item" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgaefinish"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="100dp"
        android:src="@drawable/finish"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_home"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/bg_btn1"
        android:fontFamily="casual"
        android:text="@string/home"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/card"
        app:layout_constraintEnd_toStartOf="@+id/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/bg_btn1"
        android:fontFamily="casual"
        android:text="@string/results"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/card"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/to_home"
        app:layout_constraintTop_toBottomOf="@+id/card" />

</androidx.constraintlayout.widget.ConstraintLayout>