<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selectble_item"
    tools:context=".Results">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/appbar_levels"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/selectble_item"
        android:elevation="60dp">

        <ImageView
            android:id="@+id/back_from_levels"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/best_results"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="Clear"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar_levels"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#64DD17"
                android:paddingStart="12dp">


                <ImageView
                    android:id="@+id/icon_category1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_math_svg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/quiz_math"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resultMath"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#4EBD07"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#FFAB00"
                android:paddingStart="12dp">


                <ImageView
                    android:id="@+id/icon_category2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_physics" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/quiz_physics"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resultPhysics"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#D69001"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#D50000"
                android:paddingStart="12dp">


                <ImageView
                    android:id="@+id/icon_category3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_chemistry_svg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/quiz_chemistry"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resultChemistry"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#AF0202"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="#AA00FF"
                android:paddingStart="12dp">


                <ImageView
                    android:id="@+id/icon_category4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_quize_svg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/interesting"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resultInteres"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#8404C5"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>